# AI-Traffic-Analysis

./: .gitignore  pyproject.toml  requirements.txt
src/: main.py
src/detectors/yolo/: train_ultralytics.py
src/recognizers/: traffic_analysis.py
src/train_rec/: en_PP-OCRv5_rec.yml
src/train_rec.py/: en_PP-OCRv5_rec.yml
webapp/backend/: dashboard_api.py
