[project]
name = "ai-traffic-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiortc>=1.14.0",
    "easydict>=1.13",
    "fastapi>=0.128.0",
    "filterpy>=1.4.5",
    "gdown>=5.2.1",
    "imgaug>=0.4.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "onnx>=1.20.1",
    "onnxruntime>=1.23.2",
    "opencv-python-headless>=4.13.0.90",
    "paddleocr>=3.4.0",
    "pandas>=3.0.0",
    "protobuf>=6.33.4",
    "pyclipper>=1.4.0",
    "pydantic>=2.12.5",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "shapely>=2.1.2",
    "ton-ocr>=0.2.3",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.1",
    "ultralytics>=8.4.6",
    "uvicorn>=0.40.0",
]
